Fixes deprecation warnings for Integer/Float/Boolean instantiations
Signed-off-by: Holger Bruch <hb@mfdz.de>